--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
   padding: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #111;
  }
 
  pre {
   display: inline-block;
-  color: #aaa;
+  color: #333;
   font-size: 1vw;
  }
 </style>
