--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     transition: color 0.2s;
   }
 
-  a:where(:focus, :hover) {
+  a:hover {
     color: var(--color-background);
   }
 
@@ -87,7 +87,7 @@
     z-index: -1;
   }
 
-  a:where(:focus, :hover)::before {
+  a:hover::before {
     opacity: 1;
     transform: scale(1) translateY(0);
   }
