--- a/index.html
+++ b/index.html
@@ -73,13 +73,10 @@
 
   a::before {
     background-color: var(--color-text);
-    bottom: var(--space-1);
     content: ' ';
-    left: var(--space-1);
+    inset: var(--space-1);
     opacity: 0.05;
     position: absolute;
-    right: var(--space-1);
-    top: var(--space-1);
     transform: scale(0.95) translateY(0.3em);
     transition: all 0.2s;
     z-index: -1;
