add onlyfans link

--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
     <a href="https://twitter.com/xvvvyz">twitter.com/xvvvyz</a>
     <a href="https://unsplash.com/@xvvvyz">unsplash.com/xvvvyz</a>
     <a href="https://github.com/xvvvyz">github.com/xvvvyz</a>
+    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+      onlyfans.com/xvvvyz
+    </a>
     <a href="mailto:cade@xvvvyz.xyz">cade@xvvvyz.xyz</a>
     <a href="https://github.com/xvvvyz.gpg">pgp public key</a>
   </nav>
