--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <meta charset="utf-8" />
 <meta name="color-scheme" content="dark light" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -89,14 +89,12 @@
 </style>
 
 <main>
-  <h1>cade (@xvvvyz)</h1>
+  <h1>cade / @xvvvyz</h1>
   <nav>
     <a href="https://twitter.com/xvvvyz">twitter.com/xvvvyz</a>
     <a href="https://unsplash.com/@xvvvyz">unsplash.com/xvvvyz</a>
+    <a href="https://linkedin.com/in/xvvvyz/">linkedin.com/in/xvvvyz</a>
     <a href="https://github.com/xvvvyz">github.com/xvvvyz</a>
-    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-      onlyfans.com/xvvvyz
-    </a>
     <a href="mailto:cade@xvvvyz.xyz">cade@xvvvyz.xyz</a>
     <a href="https://github.com/xvvvyz.gpg">pgp public key</a>
   </nav>
