--- a/index.html
+++ b/index.html
@@ -42,21 +42,11 @@
     width: 100vw;
   }
 
-  main {
-    text-align: right;
-  }
-
-  h1 {
-    font-size: var(--font-size);
-    font-weight: var(--font-weight);
-    margin: 0;
-    padding: var(--space-1);
-  }
-
   nav {
     align-items: flex-end;
     display: flex;
     flex-direction: column;
+    text-align: right;
   }
 
   a {
@@ -88,14 +78,12 @@
   }
 </style>
 
-<main>
-  <h1>cade / @xvvvyz</h1>
-  <nav>
-    <a href="https://twitter.com/xvvvyz">twitter.com/xvvvyz</a>
-    <a href="https://unsplash.com/@xvvvyz">unsplash.com/xvvvyz</a>
-    <a href="https://linkedin.com/in/xvvvyz/">linkedin.com/in/xvvvyz</a>
-    <a href="https://github.com/xvvvyz">github.com/xvvvyz</a>
-    <a href="mailto:cade@xvvvyz.xyz">cade@xvvvyz.xyz</a>
-    <a href="https://github.com/xvvvyz.gpg">pgp public key</a>
-  </nav>
-</main>
+<nav>
+  <a href="https://x.com/xvvvyz">x.com/xvvvyz</a>
+  <a href="https://github.com/xvvvyz">github.com/xvvvyz</a>
+  <a href="https://unsplash.com/@xvvvyz">unsplash.com/xvvvyz</a>
+  <a href="https://linkedin.com/in/xvvvyz/">linkedin.com/in/xvvvyz</a>
+  <a href="https://www.reddit.com/user/xvvvyz">reddit.com/u/xvvvyz</a>
+  <a href="mailto:cade@xvvvyz.xyz">cade@xvvvyz.xyz</a>
+  <a href="https://github.com/xvvvyz.gpg">pgp public key</a>
+</nav>
