--- a/index.html
+++ b/index.html
@@ -85,10 +85,8 @@
 </style>
 
 <nav>
-  <a href="https://x.com/xvvvyz">X</a>
   <a href="https://github.com/xvvvyz">GitHub</a>
   <a href="https://unsplash.com/@xvvvyz">Unsplash</a>
   <a href="https://linkedin.com/in/xvvvyz/">LinkedIn</a>
-  <a href="https://www.reddit.com/user/xvvvyz">Reddit</a>
-  <a href="https://github.com/xvvvyz.gpg">PGP</a>
+  <a href="https://github.com/xvvvyz.gpg">PGP key</a>
 </nav>
