--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     transform: scale(1) translateY(0);
   }
 
-  @media (min-width: 600px) {
+  @media (min-width: 750px) {
     body,
     nav {
       flex-direction: row;
@@ -98,4 +98,5 @@
   <a href="https://linkedin.com/in/xvvvyz/">LinkedIn</a>
   <a href="https://unsplash.com/@xvvvyz">Unsplash</a>
   <a href="https://www.reddit.com/user/xvvvyz/">Reddit</a>
+  <a href="mailto:hey@cade.me?subject=hey">Email</a>
 </nav>
