--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   }
 
   nav {
+    align-items: center;
     display: flex;
     flex-direction: column;
   }
@@ -94,9 +95,10 @@
 
 <h1>Hey 👋 I&rsquo;m Cade</h1>
 <nav>
-  <a href="https://github.com/xvvvyz">GitHub</a>
-  <a href="https://linkedin.com/in/xvvvyz/">LinkedIn</a>
-  <a href="https://unsplash.com/@xvvvyz">Unsplash</a>
-  <a href="https://www.reddit.com/user/xvvvyz/">Reddit</a>
   <a href="mailto:hey@cade.me?subject=hey">Email</a>
+  <a href="https://github.com/xvvvyz">GitHub</a>
+  <a href="https://unsplash.com/@xvvvyz">Unsplash</a>
+  <a href="https://linkedin.com/in/xvvvyz/">LinkedIn</a>
+  <a href="https://www.reddit.com/user/xvvvyz/">Reddit</a>
+  <a href="https://x.com/xvvvyz">X</a>
 </nav>
