--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   :root {
     --color-background: #111;
     --color-text-subtle: #999;
-    --color-text: #eee;
+    --color-text: #ddd;
     --font-family: -apple-system, Helvetica, sans-serif;
     --font-size: 18px;
     --font-weight: 400;
@@ -27,6 +27,7 @@
   }
 
   html {
+    color: var(--color-text);
     background-color: var(--color-background);
     font-family: var(--font-family);
     font-size: var(--font-size);
