update photo url

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   }
 </style>
 
-<img alt="" height="100" src="https://files.xvvvyz.xyz/mood.webp" width="100" />
+<img alt="" height="100" src="https://files.xvvvyz.xyz/me.webp" width="100" />
 <div>
   <h1>Hey 👋 I&rsquo;m Cade. I design &amp; build things for the&nbsp;www.</h1>
   <nav>
